<resources>
    <string name="app_name">Notifications</string>
    <string name="crud_app">CRUD App</string>
    <string name="create">Create</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="submit">Submit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="material_design">Material Design</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="task1">task1</string>
    <string name="channel_name">Test Notifications</string>
    <string name="channel_description">This channel is used for test notifications</string>
</resources>