<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/crudToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorOnPrimary"
        app:titleTextColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/create"
        app:titleCentered="true" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/nameInputLayout"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        app:hintTextColor="@color/deepOrange"-->
<!--        android:hint="@string/enter_your_name"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/crudToolbar"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/nameEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:imeOptions="actionNext"-->
<!--            android:inputType="textPersonName"-->
<!--            android:singleLine="true"-->
<!--            android:textColorHint="#546E7A"-->
<!--            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TextContrastCheck" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_your_name"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="?attr/colorSurface"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:hintTextColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@+id/crudToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSurface" />
    </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/colorOnPrimary"
            android:hint="@string/enter_amount"
            android:imeOptions="normal"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:textColor="?attr/colorPrimary"
            android:textColorHint="#757575"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
            tools:ignore="LabelFor,TextFields,VisualLintTextFieldSize" />
    
    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Income"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        tools:ignore="HardcodedText"
        android:textColor="?attr/colorOnSurface"
        app:buttonTint="?attr/colorOnPrimary" />

         <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expense"
        app:layout_constraintTop_toBottomOf="@+id/edit1"
        app:layout_constraintStart_toEndOf="@+id/radioIncome"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        tools:ignore="HardcodedText,UnknownId"
             app:buttonTint="?attr/colorOnPrimary"
             android:textColor="?attr/colorOnSurface"
             />
    </RadioGroup>
    
    <LinearLayout
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupType"
        tools:ignore="MissingConstraints">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:text="Windows"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText,MissingConstraints"
            android:textColor="?attr/colorOnSurface"
            app:buttonTint="?attr/colorOnPrimary" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:text="Mac"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText,MissingConstraints"
            android:textColor="?attr/colorOnSurface"
            app:buttonTint="?attr/colorOnPrimary" />

         <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:text="Printer"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText,MissingConstraints"
            android:textColor="?attr/colorOnSurface"
            app:buttonTint="?attr/colorOnPrimary" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/c4"
            android:layout_width="wrap_content"
            android:text="Smart Phones"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText,MissingConstraints"
            android:textColor="?attr/colorOnPrimary"
            app:buttonTint="?attr/colorOnSurface" />
    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/submit"
        android:textColor="?attr/colorPrimary"
        android:backgroundTint="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@+id/checkbox"
        tools:ignore="MissingConstraints,VisualLintButtonSize"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>